--- a/index.html
+++ b/index.html
@@ -2497,7 +2497,8 @@
 					</nav>
 					<div class="elementor-menu-toggle" role="button" tabindex="0" aria-label="Menu Toggle"
 						aria-expanded="false">
-						<a href="https://firstledger.net/" target="_blank" class="elementor-icon">
+						<a href="https://firstledger.net/token/rpWwRyTK1dtF1weB2nkoadSE72vFUvjJFY/584F4E4B45590000000000000000000000000000"
+							target="_blank" class="elementor-icon">
 							<img src="./images/leger.jpg" width="40px" alt="" srcset="">
 						</a>
 					</div>
@@ -2579,7 +2580,8 @@
 					data-widget_type="ha-creative-button.default">
 					<div class="elementor-widget-container">
 						<div data-magnetic="no" class="ha-creative-btn-wrap">
-							<a class="ha-creative-btn ha-stl--hermosa ha-eft--reshape" href="https://firstledger.net/"
+							<a class="ha-creative-btn ha-stl--hermosa ha-eft--reshape"
+								href="https://firstledger.net/token/rpWwRyTK1dtF1weB2nkoadSE72vFUvjJFY/584F4E4B45590000000000000000000000000000"
 								rel="nofollow"><span>BUY
 									$XONKEY</span></a>
 						</div>
@@ -2627,7 +2629,8 @@
 						data-widget_type="icon.default">
 						<div class="elementor-widget-container">
 							<div class="elementor-icon-wrapper">
-								<a href="https://firstledger.net/" target="_blank" class="elementor-icon">
+								<a href="https://firstledger.net/token/rpWwRyTK1dtF1weB2nkoadSE72vFUvjJFY/584F4E4B45590000000000000000000000000000"
+									target="_blank" class="elementor-icon">
 									<img src="./images/leger.jpg" width="40px" alt="" srcset="">
 								</a>
 							</div>
@@ -3267,7 +3270,7 @@
 											aria-labelledby="elementor-tab-title-2433">
 											<p>1. Change the network in your wallet to XRPL.<br>2. Go to Uniswap at <a
 													href="https://app.uniswap.org/swap" target="_blank"
-													rel="noopener">https://firstledger.net/</a><br>3.
+													rel="noopener">https://firstledger.net/token/rpWwRyTK1dtF1weB2nkoadSE72vFUvjJFY/584F4E4B45590000000000000000000000000000</a><br>3.
 												Connect your wallet with Uniswap.<br>4. In the lower swap field, choose
 												a token and enter the official <strong>XONKEY on Xrpl</strong> contract
 												addreess, which
@@ -3541,7 +3544,8 @@
 						data-widget_type="icon.default">
 						<div class="elementor-widget-container">
 							<div class="elementor-icon-wrapper">
-								<a href="https://firstledger.net/" target="_blank" class="elementor-icon">
+								<a href="https://firstledger.net/token/rpWwRyTK1dtF1weB2nkoadSE72vFUvjJFY/584F4E4B45590000000000000000000000000000"
+									target="_blank" class="elementor-icon">
 									<img src="./images/leger.jpg" style="width: 40px;" alt="" srcset="">
 								</a>
 							</div>
