--- a/index.html
+++ b/index.html
@@ -2612,7 +2612,8 @@
 						data-widget_type="icon.default">
 						<div class="elementor-widget-container">
 							<div class="elementor-icon-wrapper">
-								<a href="https://dexscreener.com/" target="_blank" class="elementor-icon">
+								<a href="https://dexscreener.com/xrpl/584f4e4b45590000000000000000000000000000.rpwwrytk1dtf1web2nkoadse72vfuvjjfy_xrp"
+									target="_blank" class="elementor-icon">
 									<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="#fff"
 										fill-rule="evenodd" viewBox="0 0 252 300" class="chakra-icon custom-euf446">
 										<path
@@ -3274,7 +3275,7 @@
 												Connect your wallet with Uniswap.<br>4. In the lower swap field, choose
 												a token and enter the official <strong>XONKEY on Xrpl</strong> contract
 												addreess, which
-												is <strong>TBA</strong></p>
+												is <strong>rpWwRyTK1dtF1weB2nkoadSE72vFUvjJFY</strong></p>
 										</div>
 									</div>
 									<div class="elementor-accordion-item">
@@ -3524,7 +3525,8 @@
 						data-widget_type="icon.default">
 						<div class="elementor-widget-container">
 							<div class="elementor-icon-wrapper">
-								<a href="https://dexscreener.com/" target="_blank">
+								<a href="https://dexscreener.com/xrpl/584f4e4b45590000000000000000000000000000.rpwwrytk1dtf1web2nkoadse72vfuvjjfy_xrp"
+									target="_blank">
 									<div class="elementor-icon">
 										<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="#fff"
 											fill-rule="evenodd" viewBox="0 0 252 300" class="chakra-icon custom-euf446">
